--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint:eslint:fix": "eslint --ext .ts,.tsx --no-error-on-unmatched-pattern --quiet --fix"
+    "lint:eslint:fix": "eslint --ext .ts,.tsx --no-error-on-unmatched-pattern --quiet --fix",
+    "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
+    "lint": "yarn lint:eslint:fix && yarn lint:style"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -39,5 +41,8 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "redux": "^4.2.1"
   }
 }
